bynkc/tests/fixtures/negative/494_messages_malformed_icu_nested_dispatch/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" @reference {
  "cart.count" => "{n, plural, one {nested {m, number}} other {ok}}"
}
